docs/tests/parser/declarations/invalid/EnumNonIdent.src
enum Color {
    Red,
    42,
    Blue
}
